fix overflow layout

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -236,7 +236,7 @@ section {
 .content .title {
   margin-bottom: 1.5rem;
   text-align: center;
-  margin-top: 7rem;
+  padding-top: 7rem;
 }
 
 .content .title_para {
